--- a/HomeSchoolInteraction/css/utils/notice-img.css
+++ b/HomeSchoolInteraction/css/utils/notice-img.css
@@ -1,7 +1,11 @@
 .img-box{
 		float: left;
 }
-	
+
+.mui-table-view.mui-grid-view {
+    padding: 0 0px 0px 0;
+}
+
 @media screen and (min-width: 320px) {
 	.notice-one-img {
 		max-width: 165px;
@@ -10,16 +14,15 @@
 	}
 	
 	.notice-two-img {
-		margin-left: 5px;
-		width: 120px;
-		height: 120px;
+		margin-left: -5px;
+		width: 100%;
+		height: 100px;
 	}
 	
 	.notice-more-img {
-		margin-left: 5px;
 		margin-top: -5px;
-		width: 100px;
-		height: 100px;
+		width: 100%;
+		height: 80px;
 	}
 }
 
@@ -32,14 +35,14 @@
 	}
 	
 	.notice-two-img {
-		margin-left: 5px;
-		width: 140px;
+		margin-left: -5px;
+		width: 100%;
 		height: 140px;
 	}
 	
 	.notice-more-img {
-		margin-left: 5px;
-		width: 120px;
+		margin-left: -5px;
+		width: 100%;
 		height: 120px;
 	}
 }
@@ -52,15 +55,14 @@
 	}
 	
 	.notice-two-img {
-		margin-left: 5px;
-		width: 160px;
+		margin-left: -5px;
+		width: 100%;
 		height: 160px;
 	}
 	
 	.notice-more-img {
-		margin-left: 5px;
-		margin-top: 5px;
-		width: 140px;
+		margin-left: -5px;
+		width: 100%;
 		height: 140px;
 	}
 }
@@ -73,14 +75,14 @@
 	}
 	
 	.notice-two-img {
-		margin-left: 5px;
-		width: 180px;
+		margin-left: -5px;
+		width: 100%;
 		height: 180px;
 	}
 	
 	.notice-more-img {
-		margin-left: 5px;
-		width: 160px;
+		margin-left: -5px;
+		width: 100%;
 		height: 160px;
 	}
 }
@@ -93,14 +95,14 @@
 	}
 	
 	.notice-two-img {
-		margin-left: 5px;
-		width: 200px;
+		margin-left: -5px;
+		width: 100%;
 		height: 200px;
 	}
 	
 	.notice-more-img {
-		margin-left: 5px;
-		width: 180px;
+		margin-left: -5px;
+		width: 100%;
 		height: 180px;
 	}
 }
@@ -113,14 +115,14 @@
 	}
 	
 	.notice-two-img {
-		margin-left: 5px;
-		width: 220px;
+		margin-left: -5px;
+		width: 100%;
 		height: 220px;
 	}
 	
 	.notice-more-img {
-		margin-left: 5px;
-		width: 200px;
+		margin-left: -5px;
+		width: 100%;
 		height: 200px;
 	}
 }
@@ -133,14 +135,14 @@
 	}
 	
 	.notice-two-img {
-		margin-left: 5px;
-		width: 240px;
+		margin-left: -5px;
+		width: 100%;
 		height: 240px;
 	}
 	
 	.notice-more-img {
-		margin-left: 5px;
-		width: 220px;
+		margin-left: -5px;
+		width: 100%;
 		height: 220px;
 	}
 }
@@ -153,14 +155,14 @@
 	}
 	
 	.notice-two-img {
-		margin-left: 5px;
-		width: 270px;
+		margin-left: -5px;
+		width: 100%;
 		height: 270px;
 	}
 	
 	.notice-more-img {
-		margin-left: 5px;
-		width: 240px;
+		margin-left: -5px;
+		width: 100%;
 		height: 240px;
 	}
 }
